--- a/NodeJS/HTTP_Server/package.json
+++ b/NodeJS/HTTP_Server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "basic.js",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
