--- a/NodeJS/HTTP_Server/package.json
+++ b/NodeJS/HTTP_Server/package.json
@@ -2,9 +2,10 @@
   "name": "http_server",
   "version": "1.0.0",
   "description": "",
-  "main": "basic.js",
+  "main": "index.js",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^5.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
