--- a/NodeJS/HTTP_Server/package.json
+++ b/NodeJS/HTTP_Server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "basic.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.2.0"
   },
